Последние изменения с интенсива

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
         <button class="button button-primary">Смотреть квартиры на этаже</button>
       </div>
     </main>
+    <div class="modal">
+      <div class="modal-dialog">
+        <div class="modal-image"></div>
+        <div class="modal-info"></div>
+      </div>
+    </div>
+    <!-- /.modal -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
