--- a/index.html
+++ b/index.html
@@ -99,8 +99,78 @@
     </main>
     <div class="modal">
       <div class="modal-dialog">
-        <div class="modal-image"></div>
-        <div class="modal-info"></div>
+        <div class="modal-image">
+          <h2 class="modal-title">ЭТАЖ 07</h2>
+          <svg
+            class="modal-floor"
+            width="433"
+            height="408"
+            viewBox="0 0 433 408"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <rect width="433" height="408" fill="url(#pattern1)" />
+            <defs>
+              <pattern id="pattern1" patternContentUnits="objectBoundingBox" width="1" height="1">
+                <use xlink:href="#image1" transform="scale(0.00230947 0.00245098)" />
+              </pattern>
+              <image id="image1" width="433" height="408" xlink:href="img/floor.png" alt="img: home" />
+            </defs>
+            <a href="#">
+              <path data-room="40" d="M388 81V141H314V148H267.5V131H247V32.5H338.5V16H405V81H388Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="41" d="M314 148.5H268V200H367.5V205H387.5V141H314V148.5Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="42" d="M314.192 252.662H268V200H367.916V204.602H388V268H314.192V252.662Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="43" d="M314 253H268.5V309H295.5V376H340V393H405V328.5H388V268.5H314V253Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="44" d="M218 394.5V264H247.5V273.5H267.5V310.5H294.5V375H259.5V394.5H218Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="45" d="M217 394.5V264H187.5V273.5H167.5V310.5H140.5V375H175.5V394.5H217Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="46" d="M121 252H166.5V309H139.5V376H95V393H30V328.5H47V273.5H121V252Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="47" d="M119.5 273.5H46V198H167V250.822H119.5V273.5Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="48" d="M124.729 116H46V198H167V145.178H124.729V116Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+            <a href="#">
+              <path data-room="49" d="M46.5 81V115.5H125V144.5H164V131H184.5V32.5H93V16H28V81H46.5Z" fill="#3595F6" fill-opacity="0.75" />
+            </a>
+          </svg>
+        </div>
+        <div class="modal-info">
+          <div class="modal-info-wrapper">
+            <h2 class="modal-title">ВЫБЕРИТЕ КВАРТИРУ</h2>
+            <ul class="modal-list">
+              <li data-room="40" class="modal-item"><a href="#">кв. 40, 2 комн. 50 кв. м.</a></li>
+              <li data-room="41" class="modal-item"><a href="#">кв. 41, 2 комн. 50 кв. м.</a></li>
+              <li data-room="42" class="modal-item"><a href="#">кв. 42, 2 комн. 50 кв. м.</a></li>
+              <li data-room="43" class="modal-item"><a href="#">кв. 43, 2 комн. 50 кв. м.</a></li>
+              <li data-room="44" class="modal-item"><a href="#">кв. 44, 2 комн. 50 кв. м.</a></li>
+              <li data-room="45" class="modal-item"><a href="#">кв. 45, 2 комн. 50 кв. м.</a></li>
+              <li data-room="46" class="modal-item"><a href="#">кв. 46, 2 комн. 50 кв. м.</a></li>
+              <li data-room="47" class="modal-item"><a href="#">кв. 47, 2 комн. 50 кв. м.</a></li>
+              <li data-room="48" class="modal-item"><a href="#">кв. 48, 2 комн. 50 кв. м.</a></li>
+              <li data-room="49" class="modal-item"><a href="#">кв. 49, 2 комн. 50 кв. м.</a></li>
+            </ul>
+            <div class="modal-desc">Квартиры, отмеченные серым, уже выкуплены</div>
+          </div>
+        </div>
+        <svg class="close" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2 2L26 26" stroke="#3596F5" stroke-width="3" />
+          <path d="M26 2L2 26" stroke="#3596F5" stroke-width="3" />
+        </svg>
       </div>
     </div>
     <!-- /.modal -->
