Доделал выбор этажей для модального окна

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="modal">
       <div class="modal-dialog">
         <div class="modal-image">
-          <h2 class="modal-title">ЭТАЖ 07</h2>
+          <h2 class="modal-title">ЭТАЖ <span class="current-floor">07</span></h2>
           <svg
             class="modal-floor"
             width="433"
