--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <nav class="navbar-nav">
           <ul class="navbar-menu">
-            <li class="navbar-item">
+            <li class="navbar-item active">
               <a href="#" class="navbar-link"> Подобрать квартиру </a>
             </li>
             <li class="navbar-item">
